tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_turbofish_use_generic_type_alias_with_partial_generics_with_turbofish_in_method_call_errors_first_type/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected type bool, found type Field
   ┌─ src/main.nr:16:38
   │
16 │             let _ = Bar::<bool>::new(1, 1);
   │                                      -
   │

Aborting due to 1 previous error
